{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 61,
  "lineage": "91d9c37e-04e1-4040-fab4-58bbd41022f1",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:security-group/sg-000a75535f9090d89",
            "description": "Allow MySQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000a75535f9090d89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "console-mysql-sg-dev",
            "name_prefix": "",
            "owner_id": "741448961150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-rds-sg-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-rds-sg-dev",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "customer-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac14f3b43befb55c",
            "association_id": "eipassoc-0ce9fe9401e2f8a28",
            "domain": "vpc",
            "id": "eipalloc-0ac14f3b43befb55c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0398f5e0a833b58c2",
            "private_dns": "ip-13-20-1-145.ec2.internal",
            "private_ip": "13.20.1.145",
            "public_dns": "ec2-100-25-183-143.compute-1.amazonaws.com",
            "public_ip": "100.25.183.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-eip-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-eip-dev",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd5c911c0d8dcdc",
            "arn": "arn:aws:ec2:us-east-1:741448961150:instance/i-0723ecfc958537ecf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0723ecfc958537ecf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "citnow-dev-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea5cfd2b935503bf",
            "private_dns": "ip-13-20-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.20.1.238",
            "public_ip": "44.220.95.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081a719be2669b8f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d13d6cb2cfcc7dd8",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-bastion-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-bastion-dev",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070be468212778365"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc",
            "module.vpc.data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customer-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:internet-gateway/igw-04e6c55a51a807296",
            "id": "igw-04e6c55a51a807296",
            "owner_id": "741448961150",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-igw-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-igw-dev",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customer-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac14f3b43befb55c",
            "association_id": "eipassoc-0ce9fe9401e2f8a28",
            "connectivity_type": "public",
            "id": "nat-0d2d4fd97c7f3869f",
            "network_interface_id": "eni-0398f5e0a833b58c2",
            "private_ip": "13.20.1.145",
            "public_ip": "100.25.183.143",
            "subnet_id": "subnet-0d13d6cb2cfcc7dd8",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-igw-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-igw-dev",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:route-table/rtb-0794f6377e04912c1",
            "id": "rtb-0794f6377e04912c1",
            "owner_id": "741448961150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2d4fd97c7f3869f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-rt-dev-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-rt-dev-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:route-table/rtb-0f2c8c5dd4f0008f3",
            "id": "rtb-0f2c8c5dd4f0008f3",
            "owner_id": "741448961150",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e6c55a51a807296",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-rt-dev-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-rt-dev-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aab75346bef7d4d8",
            "route_table_id": "rtb-0794f6377e04912c1",
            "subnet_id": "subnet-0cd25805fee9fd33a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2c6a089e271607",
            "route_table_id": "rtb-0794f6377e04912c1",
            "subnet_id": "subnet-0479d8829583d5f66"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0764d6f8549839b60",
            "route_table_id": "rtb-0794f6377e04912c1",
            "subnet_id": "subnet-05bc7347bc6536334"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04860fec996a3af92",
            "route_table_id": "rtb-0f2c8c5dd4f0008f3",
            "subnet_id": "subnet-0d13d6cb2cfcc7dd8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7eae09882bf52f",
            "route_table_id": "rtb-0f2c8c5dd4f0008f3",
            "subnet_id": "subnet-016ce088433384ac0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b016b8ddb96bb3b",
            "route_table_id": "rtb-0f2c8c5dd4f0008f3",
            "subnet_id": "subnet-094fd68a89040c204"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:security-group/sg-070be468212778365",
            "description": "console-bastion-dev-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070be468212778365",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "console-bastion-dev-sg",
            "name_prefix": "",
            "owner_id": "741448961150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-bastion-dev-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-bastion-dev-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-0cd25805fee9fd33a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "13.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd25805fee9fd33a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-0",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-0",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-0479d8829583d5f66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "13.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479d8829583d5f66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-05bc7347bc6536334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "13.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bc7347bc6536334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-private-subnet-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-nat-gw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-0d13d6cb2cfcc7dd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "13.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d13d6cb2cfcc7dd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-0",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-0",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-016ce088433384ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "13.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ce088433384ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:subnet/subnet-094fd68a89040c204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "13.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094fd68a89040c204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448961150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-public-subnet-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-01637ae994f83a5c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448961150:vpc/vpc-01637ae994f83a5c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.20.0.0/16",
            "default_network_acl_id": "acl-03fa753ca7959c80b",
            "default_route_table_id": "rtb-019279eea8e9254ba",
            "default_security_group_id": "sg-0257eb3e035b725e3",
            "dhcp_options_id": "dopt-0d51a200bdbd18658",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01637ae994f83a5c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019279eea8e9254ba",
            "owner_id": "741448961150",
            "tags": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "console",
              "Environment": "dev",
              "Name": "console-dev",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}